# google-authenticator-decoder

./: README.md  pyproject.toml
sh/: gen_proto.sh
src/qrextractor/: cli.py  enums.py
src/qrextractor/protobuf/: otpath_migration_pb2.py  otpath_migration_pb2.pyi
